--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="portfolio">
         <div id="portfolio">
             
-            <h2 class="portfolio-title">Наше портфолио</h2>
+            <h2 class="portfolio-title">Портфолио</h2>
             <p class="portfolio-subtitle">Индивидуальные решения для каждого помещения — создаем пространства, вдохновляющие на жизнь</p>
 
             <div class="portfolio-container">
